Updated the responsive styling for container.

--- a/compare-npm-download-stats/assets/css/style.css
+++ b/compare-npm-download-stats/assets/css/style.css
@@ -36,3 +36,8 @@ body {
 .overflow-x-auto::-webkit-scrollbar-thumb:hover {
     background: #bdbbbb;
 }
+
+#container {
+    max-width: 750px;
+    width: 95%;
+}
