--- a/compare-npm-download-stats/assets/css/style.css
+++ b/compare-npm-download-stats/assets/css/style.css
@@ -101,3 +101,25 @@ body {
 .rounded {
     border-radius: 4px;
 }
+
+.context-menu {
+  display: none; /* Hidden by default */
+  position: fixed;
+  background-color: white;
+  box-shadow: 0 2px 10px rgba(0,0,0,0.2);
+  border-radius: 4px;
+  z-index: 1000;
+  padding: 8px 0px;
+}
+.context-menu ul {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+.context-menu li {
+  padding: 8px 15px;
+  cursor: pointer;
+}
+.context-menu li:hover {
+  background-color: #f0f0f0;
+}
